# Spritesheet-Studio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  InstalIOCV.sh  InstalIwxWidgets.sh  README.md
Spritesheet-Studio/: CMakeLists.txt  main.cpp  main.h
src/: CMakeLists.txt  Fl_OpenCV.cpp  dds_img_reader.cpp  file_IO.cpp  main.cpp  opencv_image.cpp
src/includes/: Fl_OpenCV.h  dds_img_reader.h  file_IO.h  opencv_image.h
